# cdn-cli

./: Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs  state.rs
src/run/: delete.rs  list.rs  mod.rs  register.rs  registration.rs  upload.rs
