[package]
name = "cdn_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.1"
aws-sdk-s3 = "1.96.0"
clap = { version = "4.5.41", features = ["derive"] }
resolve-path = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.1"
uuid = { version = "1.17.0", features = ["v4"] }


[[bin]]
name = "cdn"
path = "src/main.rs"

